fix: makes thougt text center aligned

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -380,6 +380,7 @@ h6 {
   margin-top: 2em;
   border-radius: 1em;
   padding: 1em;
+  text-align: center;
 }
 .text-bg {
   padding: 0 0.25em;
